# ipapi-rust

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
docs/: asn-and-dns.md  domain-age.md  email-validation.md  error-handling.md  fraud-risk-scoring.md  ip-geolocation.md  vpn-proxy-tor.md
examples/: smoke.rs
src/: blocking.rs  client.rs  error.rs  lib.rs  models.rs
tests/: client.rs
